--- a/.github/workflows/simple-release.yml
+++ b/.github/workflows/simple-release.yml
@@ -134,3 +134,40 @@ jobs:
             artifacts/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  create-sdk-tags:
+    name: Create SDK Tags
+    needs: create-release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Extract version from tag
+        id: version
+        run: |
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            VERSION="${{ inputs.version }}"
+          else
+            VERSION="${GITHUB_REF#refs/tags/}"
+          fi
+          echo "version=${VERSION}" >> $GITHUB_OUTPUT
+
+      - name: Create SDK tags
+        env:
+          VERSION: ${{ steps.version.outputs.version }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          # Create and push SDK tag for Go module versioning
+          echo "Creating SDK tag: sdk/${VERSION}"
+          git tag -a "sdk/${VERSION}" -m "SDK release ${VERSION}"
+          git push origin "sdk/${VERSION}"
+
+          echo "✅ Created SDK tag: sdk/${VERSION}"
